fix: Se agrego logixa de negocio y estructura de bases de datos
